Version 1.2.0 Changelog: Restructured Github Page Moved Imports from shiggycord.css to quickcss Removed Deploy Folder Removed Radialstatus.theme.css Cleaned some files Added new chat button snippet in colligy.css Fixed Bug in userpopout.css Removed the Radialstatus mobile icon Cleaned the shiggycord.theme.css file and removed BetterDiscord integration Renamed shiggycord.theme.css to shiggycord.css Renamed shiggycord.css to mainshiggy.css Moved variable from shiggyfy.css to mainshiggy.css Moved shiggyfy.css spotify code to shigging.css Removed shiggyfy.css Lost my sanity Moved colliggy.css into Addons Renamed colliggy.css to collapsing.css

--- a/Shiggycord/mainshiggy.css
+++ b/Shiggycord/mainshiggy.css
@@ -1,16 +1,7 @@
-@import url(https://raw.githubusercontent.com/xdCoolesding/shiggycord/main/Source/Shiggycord/colliggy.css);
-@import url(https://raw.githubusercontent.com/xdCoolesding/shiggycord/main/Source/Shiggycord/shiggyfy.css);
-@import url(https://raw.githubusercontent.com/xdCoolesding/shiggycord/main/Source/Shiggycord/shigging.css);
-@import url(https://raw.githubusercontent.com/xdCoolesding/shiggycord/main/Source/Addons/radialstatus.css);
-@import url(https://raw.githubusercontent.com/xdCoolesding/shiggycord/main/Source/Addons/winbar.css);
-@import url(https://raw.githubusercontent.com/xdCoolesding/shiggycord/main/Source/Addons/userpopout.css);
-@import url(https://zuzumi-f.github.io/Moon-Rabbits-Dream-About-Virtual/release/pop.css);
-@import url(https://raw.githubusercontent.com/xdCoolesding/shiggycord/main/Source/Addons/settingsmodal.css);
-
 :root {
-  --sc-version: "1.1.3";
+  --sc-version: "1.2.0";
+  --bg-overlay-1: ;
 }
-
 .theme-dark .container-YkUktl:before {
   content: "shiggycord";
   color: var(--main-color);
